--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,10 @@
 	"files.exclude": {
 		"dist": true,
 		"node_modules": true,
-		".gitignore": true,
+		".gitignore": false,
 		"package-lock.json": true,
 		"package.json": true,
 		"2021_archive": true,
+		"latest": true
 	}
 }
