--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
 		"@types/inquirer": "^9.0.2",
 		"@types/node": "^20.9.1",
 		"inquirer": "^9.1.3"
+	},
+	"scripts": {
+		"test": "node dist/util/test.js"
 	}
 }
